--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "grunt-contrib-jshint": "~0.8.0",
         "grunt-contrib-connect": "~0.6.0",
         "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-sass": "~0.7.3",
         "grunt-jsonlint": "~1.0.4",
         "grunt-newer": "~0.6.1",
         "load-grunt-tasks": "~0.3.0",
