--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "threejs": "",
-    "angular": "1.2.16"  
+    "angular": "1.2.16",
+    "angular-animate": "1.2.16"  
   }
 }
 
